--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@ code {
 
 .app {
   background-image: url('./images/digital-characters2.png');
+  padding: 1em 0;
 }
 
 .banner-col {
@@ -36,6 +37,28 @@ code {
 .banner-img3 {
   height: 100%;
   width: 80%;
+}
+
+.episode-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.episode-list div {
+  margin-bottom: 2em;
+}
+
+.episode-list p {
+  margin: 0;
+}
+
+.episode-list-container {
+  border: 1px solid black;
+  background-color: lightgray;
+  margin: 0 auto;
+  padding: 0 1em;
+  width: 75%;
 }
 
 .homepage {
